--- a/style.css
+++ b/style.css
@@ -1,6 +1,82 @@
-div{
-    background-color: aqua;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background: linear-gradient( 135deg, #2e2e2e, #000000);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    color: aliceblue;
+    text-align: center;
+
+}
+#head{
+    margin: 50px 200px;
+}
+.cri{
+    height: 500px;
+    width: 500px;
+    border: white 8px solid;
+    box-shadow: 8px 8px 7px seagreen;
+}
+h1{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+.jj{
+    font-size: 22px;
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.contain{
+    font-size: 20px;
+    background-color: wheat;
+    color: #2e2e2e;
+    border-radius: 20px;
+    padding: 30px;
+    margin-top: 50px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    /* display: none;*/
+    /* display: inline */
+    /* display: inline-block; */
+}
+button{
+    padding: 30px 60px;
+    font-size: 20px;
+    font-weight: bolder;
+    background-color: chocolate;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.picnic{
+    margin: 50px;
     font-size: larger;
-    padding: 10px;
+    color: tomato;
+    
+}
+.picnic p{
+    margin-bottom:50px ;
+}
+.img{
+    padding: auto;
+    height: auto;
+    width: 100%;
+   
+
+}
+.img img{
+    height: 100%;
+    width: 100%;
+    border: 15px solid white;
+    box-shadow: 20px 20px 10px grey;
+    margin-bottom: 50px;
+}
+video{
+   
 }
